Fixed navbar and cat sprites

--- a/main_site/index.html
+++ b/main_site/index.html
@@ -2,17 +2,25 @@
 <html lang = "en">
 <head>
 	<meta charset="UTF-8">
-	<title>This is our page</title>
-	<link rel="stylesheet" type="text/css" href="positioning.css">
+	<title>Newbie Coding Club</title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-<p>Here's some more text</p>
-<div>
-	<img src="cat1.jpg" class="abs front">
-	<img src="cat2.jpeg" class="abs back">
+<nav>
+	<ul>
+		<li>Home</li>
+		<li>Cat Pictures</li>
+		<li>Who are we?</li>
+		<li>Videos</li>
+	</ul>
+</nav>
+<div class="mainContainer">
+	<div class="catWindow">
+		Cat picture
+	</div>
 </div>
-
 
 </body>
 </html>
