Switch Borat to Ryan

--- a/hackathon_site/index.html
+++ b/hackathon_site/index.html
@@ -82,8 +82,8 @@ function popupwindow(url, title, w, h) {
 	<a href="#" onclick="return popupwindow('popup.html','Signup or Log In',700,398)">
 		<div class="public-tab mid-1">NY Times
 			<div class="hover-text">
-				<h4>Sacha Baron Cohen</h4>
-				<p>105,343 downloads</p>
+				<h4>Ryan Holmes</h4>
+				<p>108,105,343 downloads</p>
 			</div>
 		</div>
 	</a>
