Fixed typo in popup

--- a/hackathon_site/popup.html
+++ b/hackathon_site/popup.html
@@ -15,7 +15,7 @@
 	<div id="logo">HootSuite</div>
 	<div id="left-container">
 		<h5>HootSuite Public Tabs</h3>
-		<p class="popup-p">To get you Public Tab, you will first need a HootSuite account.</p>
+		<p class="popup-p">To get your Public Tab, you will first need a HootSuite account.</p>
 		<h6>Already have a HootSuite account?</h5>
 		<a href="https://hootsuite.com/dashboard" target="_blank"><div id="login-button">LOGIN</div></a>
 	</div>
