--- a/hackathon_site/index.html
+++ b/hackathon_site/index.html
@@ -83,7 +83,7 @@ function popupwindow(url, title, w, h) {
 		<div class="public-tab mid-1">NY Times
 			<div class="hover-text">
 				<h4>Ryan Holmes</h4>
-				<p>165,000,000 dallahs</p>
+				<p>165,000,000 downloads</p>
 			</div>
 		</div>
 	</a>
