Added subfooter to hackathon site

--- a/hackathon_site/index.html
+++ b/hackathon_site/index.html
@@ -133,6 +133,7 @@ function popupwindow(url, title, w, h) {
 				<li>Feedback</li>
 			</ul>
 		</div>
+		<div class="sub-footer"></div>
 	</header>
 </footer>
 
