Made the nav bar look pretty

--- a/main_site/index.html
+++ b/main_site/index.html
@@ -3,23 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Newbie Coding Club</title>
+	<link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-<nav>
-	<ul>
-		<li>Home</li>
-		<li>Cat Pictures</li>
-		<li>Who are we?</li>
-		<li>Videos</li>
-	</ul>
-</nav>
+<header class="topBar">
+	<nav>
+		<div class="logo">newbiecodingclub</div>
+		<ul>
+			<li>Home</li>
+			<li>Cat Pictures</li>
+			<li>Who are we?</li>
+			<li>Videos</li>
+		</ul>
+	</nav>
+</header>
 <div class="mainContainer">
-	<div class="catWindow">
-		Cat picture
-	</div>
+	<div class="catWindow">Cat picture</div>
 </div>
 
 </body>
