Further changes to main site nav bar

--- a/main_site/index.html
+++ b/main_site/index.html
@@ -11,7 +11,7 @@
 
 <header class="topBar">
 	<nav>
-		<div class="logo">newbiecodingclub</div>
+		<div class="logo">newbie<span>coding</span>club</div>
 		<ul>
 			<li>Home</li>
 			<li>Cat Pictures</li>
