Updated topBar, bottomBar, background

--- a/main_site/index.html
+++ b/main_site/index.html
@@ -4,25 +4,35 @@
 	<meta charset="UTF-8">
 	<title>Newbie Coding Club</title>
 	<link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
 <header class="topBar">
-	<nav>
+	<nav class="mainWidth">
 		<div class="logo">newbie<span>coding</span>club</div>
 		<ul>
-			<li>Home</li>
-			<li>Cat Pictures</li>
-			<li>Who are we?</li>
-			<li>Videos</li>
+			<li>who?</li>
+			<li><span>what?</span></li>
+			<li>where?</span></li>
+			<li><span>when?</span></li>
+			<li>why?</span></li>
 		</ul>
 	</nav>
 </header>
-<div class="mainContainer">
+
+<div class="mainContainer mainWidth">
+	<h1>who?<h1>
 	<div class="catWindow">Cat picture</div>
 </div>
+
+<footer class="bottomBar">
+	<section class="mainWidth">
+
+	</section>
+</footer>
 
 </body>
 </html>
