Added polaroid photos to main_site

--- a/main_site/index.html
+++ b/main_site/index.html
@@ -25,7 +25,10 @@
 
 <div class="mainContainer mainWidth">
 	<h1>who?<h1>
-	<div class="catWindow">Cat picture</div>
+	<div class="mainWidth memberPhotos">
+		<div class="polaroids yashaPhoto">Yasha</div>
+		<div class="polaroids marcPhoto">Marc</div>
+	</div>
 </div>
 
 <footer class="bottomBar">
