fixed text indent, added filler text

--- a/main_site/index.html
+++ b/main_site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Newbie Coding Club</title>
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
 <header class="topBar">
@@ -16,26 +17,30 @@
 		<ul>
 			<li>who?</li>
 			<li><span>what?</span></li>
-			<li>where?</span></li>
+			<li>where?</li>
 			<li><span>when?</span></li>
-			<li>why?</span></li>
+			<li>why?</li>
 		</ul>
 	</nav>
 </header>
 
 <div class="mainContainer mainWidth">
-	<h1>who?<h1>
-	<div class="mainWidth memberPhotos">
-		<div class="polaroids yashaPhoto">Yasha</div>
-		<div class="polaroids marcPhoto">Marc</div>
-	</div>
+	<h1>who?</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<section class="mainWidth memberPhotos">
+		<div class="polaroids yashaPhoto"></div>
+		<div class="polaroids marcPhoto"></div>
+	</section>
 </div>
 
 <footer class="bottomBar">
 	<section class="mainWidth">
-
+		<p>Some random text</p>
 	</section>
 </footer>
 
 </body>
+
 </html>
