--- a/twitter_app/index.html
+++ b/twitter_app/index.html
@@ -51,35 +51,33 @@
       <div class="container">
         <h1>What they saying bout you willis?</h1>
         <p>Search for anything, and see how much smack people are Tweeting about it.</p>
-        <div class="container">
         <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" placeholder="e.g. Obama" class="form-control">
-              </div>
+          <div class="col-sm-6">
+            <div class="form-group">
+              <input type="text" placeholder="e.g. Obama" class="form-control">
             </div>
-            <div class="col-md-6">
-              <button type="submit" class="btn btn-success">Search fool!</button>
-            </div>
+          </div>
+          <div class="col-sm-6">
+            <button type="button" class="btn btn-danger btn-orange">Search</button>
+          </div>
         </div>
-      </div>
       </div>
     </div>
 
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-md-4">
           <h2>Heading</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="http://getbootstrap.com/examples/jumbotron/#">View details »</a></p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4">
           <h2>Heading</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="http://getbootstrap.com/examples/jumbotron/#">View details »</a></p>
        </div>
-        <div class="col-lg-4">
+        <div class="col-md-4">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="http://getbootstrap.com/examples/jumbotron/#">View details »</a></p>
@@ -89,7 +87,7 @@
       <hr>
 
       <footer>
-        <p>© Company 2013</p>
+        <p>© Newbie Coding Club 2013</p>
       </footer>
     </div> <!-- /container -->
 
