--- a/twitter_app/index.html
+++ b/twitter_app/index.html
@@ -63,9 +63,9 @@
 
     <div class="container">
       <!-- Example row of columns -->
-      <div id="_tweets">
-        <div class="row"></div>
-        <div class="row"></div>
+      <div id="_tweets" class="text-center">
+        <div class="row _row1"></div>
+        <div class="row _row2"></div>
       </div>
 
       <hr>
