adjusted copyright date

--- a/twitter_app/index.html
+++ b/twitter_app/index.html
@@ -71,7 +71,7 @@
       <hr>
 
       <footer>
-        <p>© Newbie Coding Club 2013</p>
+        <p>© Newbie Coding Club 2013-2014</p>
       </footer>
     </div> <!-- /container -->
 
