--- a/twitter_app/static/index.html
+++ b/twitter_app/static/index.html
@@ -51,7 +51,7 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="form-group">
-              <input type="text" placeholder="e.g. Obama" class="form-control">
+              <input type="text" placeholder="e.g. Obama" class="form-control" name="keyword">
             </div>
           </div>
           <div class="col-sm-6">
